# bb_alembic

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  build.sh  lipsync_install.sh
arnold/: CMakeLists.txt
cmake/: AlembicArnold.cmake  AlembicBoost.cmake
cmake/Modules/: FindAlembic.cmake
maya/scripts/: bb_alembicAssignmentEditorUI.py
mtoa/gpuCacheTranslator/: gpuCacheTemplate.py  gpuCacheTranslator.cpp  plugin.cpp
